--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,22 +1,22 @@
 # CV
 since=seit
-
 # Website
 hire_me=Hire me
 request_cv=Profil anfragen
 toggle_button_text_prefix={0} umschalten
 imprint_link_text=Impressum
-privacy_and_cookies=Datenschutz- und Cookie-Richtlinien
-
+privacy_and_cookies_link_text=Datenschutz- und Cookie-Richtlinien
 # Cookie consent
-cookie_consent_message=Diese Website verwendet Cookies, um Ihnen das bestmögliche Erlebnis zu bieten.
-cookie_consent_data_protection_link_text=Datenschutz- und Cookie-Richtlinie
+cookie_consent_message=Diese Website verwendet Cookies, um Ihnen das bestm&ouml;gliche Erlebnis zu bieten.<br>
+cookie_consent_data_protection_link_text=Datenschutz- und Cookie-Richtlinien
 cookie_consent_imprint_link_text=Impressum
-cookie_consent_accept_all_button_text="Alle akzeptieren"
-cookie_consent_decline_all_button_text="Alle ablehnen"
-
-# Data Protection
-data_protection_title=Datenschutz- und Cookie-Richtlinien
-
+cookie_consent_accept_all_button_text=Alle akzeptieren
+cookie_consent_decline_all_button_text=Alle ablehnen
+cookie_consent_revoke_text=Cookie-Entscheidung widerrufen
+# Privacy and cookies
+privacy_and_cookies_title=Datenschutz- und Cookie-Richtlinien
 # Imprint
 imprint_title=Impressum
+# URLs - Must be mapped in a controller
+imprint_path=impressum.html
+gdpr_path=datenschutz.html
