Added dynamic imprint

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -17,6 +17,18 @@ cookie_consent_revoke_text=Cookie-Entscheidung widerrufen
 privacy_and_cookies_title=Datenschutz- und Cookie-Richtlinien
 # Imprint
 imprint_title=Impressum
+imprint_legal_hint_title=Angaben gem&auml;&szlig; § 5 TMG:
+imprint_address_title=Postanschrift
+imprint_address_co=c/o
+imprint_contact_title=Kontakt:
+imprint_phone_title=Telefon:
+imprint_email_title=E-Mail:
+imprint_representative_title=Vertreten durch:
+imprint_vat_id_title=Umsatzsteuer-Identifikationsnummer
+imprint_insurance_title=Die Berufshaftpflichtversicherung wurde abgeschlossen bei:
+imprint_insurance_covarage_region_title=Geltungsbereich des Versicherungsschutzes:
+imprint_website_info_title=Hinweise zur Website
+imprint_website_copyright_notices_title=Urheberrechtliche Hinweise
 # URLs - Must be mapped in a controller
 imprint_path=impressum.html
 gdpr_path=datenschutz.html
