--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,6 +18,18 @@ cookie_consent_revoke_text=Revoke cookie decision
 privacy_and_cookies_title=Privacy and Cookie Policy
 # Imprint
 imprint_title=Imprint
+imprint_legal_hint_title=Information in accordance with &sect; 5 TMG:
+imprint_address_title=Postal address
+imprint_address_co=c/o
+imprint_contact_title=Contact:
+imprint_phone_title=Phone:
+imprint_email_title=E-mail:
+imprint_representative_title=Represented by:
+imprint_vat_id_title=Sales tax identification number
+imprint_insurance_title=Professional liability insurance has been taken out with:
+imprint_insurance_covarage_region_title=Scope of insurance coverage:
+imprint_website_info_title=Website notes
+imprint_website_copyright_notices_title=Copyright notices
 # URL
 imprint_path=imprint.html
 gdpr_path=privacy.html
