--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,14 +13,12 @@ cookie_consent_data_protection_link_text=Privacy and Cookie Policy
 cookie_consent_imprint_link_text=Imprint
 cookie_consent_accept_all_button_text=Allow all
 cookie_consent_decline_all_button_text=Decline all
-cookie_consent_revoke_text=Revoke cookie decision
-# Privacy and cookies
-privacy_and_cookies_title=Privacy and Cookie Policy
+
 # Imprint
 imprint_title=Imprint
 imprint_legal_hint_title=Information in accordance with &sect; 5 TMG:
 imprint_address_title=Postal address
-imprint_address_co=c/o
+address_co=c/o
 imprint_contact_title=Contact:
 imprint_phone_title=Phone:
 imprint_email_title=E-mail:
@@ -33,3 +31,78 @@ imprint_website_copyright_notices_title=Copyright notices
 # URL
 imprint_path=imprint.html
 gdpr_path=privacy.html
+# Privacy and cookies
+privacy_and_cookies_title=Privacy and Cookie Policy
+privacy_legal_information_title=General note and mandatory information
+privacy_legal_responsible_position_section_title=Designation of the responsible entity
+privacy_legal_responsible_position_title=The responsible party for data processing on this website is:
+privacy_legal_responsible_position_info=The responsible party decides alone or jointly with others on the purposes and means of the processing of personal data (e.g. names, contact details or similar).
+privacy_legal_data_processing_section_title=Revoking your consent to data processing
+privacy_legal_cookie_consent_revoke_text_1=Here you can revoke your decision on cookies.
+privacy_legal_cookie_consent_revoke_text_2=Revoke cookie decision
+privacy_legal_data_processing_text=Some data processing operations are only possible with your express consent. A revocation of your already given consent is possible at any time. An informal communication by e-mail is sufficient for the revocation. The legality of the data processing carried out until the revocation remains unaffected by the revocation.
+privacy_legal_complaint_section_title=Right to complain to the competent supervisory authority
+privacy_legal_complaint_section_text=As a data subject, you have the right to lodge a complaint with the competent supervisory authority in the event of a data protection violation. The competent supervisory authority regarding data protection issues is the state data protection commissioner of the federal state in which our company''s registered office is located. The following link provides a list of data protection officers and their contact details: <a target="blank" href="{0}">{0}</a>.
+privacy_legal_complaint_section_text_link=https://www.bfdi.bund.de/EN/Home/home_node.html
+privacy_data_portability_section_title=Right of data portability
+privacy_data_portability_text=You have the right to have data that we process automatically on the basis of your consent or in fulfillment of a contract handed over to you or to third parties. The data will be provided in a machine-readable format. If you request the direct transfer of the data to another responsible party, this will only be done insofar as it is technically feasible.
+privacy_data_information_section_title=Right to information, correction, blocking, deletion
+privacy_data_information_text=Within the scope of the applicable legal provisions, you have the right at any time to free information about your stored personal data, the origin of the data, their recipients and the purpose of data processing and, if applicable, a right to correction, blocking or deletion of this data. In this regard and also for further questions on the subject of personal data, you can contact us at any time via the contact options listed in the imprint.
+privacy_encryption_section_title=SSL or TLS encryption
+privacy_encryption_text=For security reasons and to protect the transmission of confidential content that you send to us as site operator, our website uses SSL or TLS encryption. This means that data that you transmit via this website cannot be read by third parties. You can recognize an encrypted connection by the "https://" address line of your browser and the lock symbol in the browser line.
+privacy_server_log_section_title=Server log files
+privacy_server_log_text=In server log files, the provider of the website automatically collects and stores information that your browser automatically transmits to us. These are:
+privacy_server_log_list_item_1=Visited page on our domain
+privacy_server_log_list_item_2=Date and time of the server request
+privacy_server_log_list_item_3=Browser type and browser version
+privacy_server_log_list_item_4=Operating System Used
+privacy_server_log_list_item_5=Referrer URL
+privacy_server_log_list_item_6=Host name of the accessing computer
+privacy_server_log_list_item_7=IP address
+privacy_server_log_info=There is no merging of this data with other data sources. The data processing is based on Art. 6 para. 1 lit. b DSGVO, which permits the processing of data for the fulfillment of a contract or pre-contractual measures.
+privacy_contact_form_section_title=Contact form
+privacy_contact_form_text_1=Data transmitted via contact form will be stored, including your contact details, in order to be able to process your request or to be available for follow-up questions. This data will not be passed on without your consent.
+privacy_contact_form_text_2=The processing of the data entered in the contact form is based exclusively on your consent (Art. 6 para. 1 lit. a DSGVO). A revocation of your already given consent is possible at any time. An informal communication by e-mail is sufficient for the revocation. The legality of the data processing operations carried out until the revocation remains unaffected by the revocation.
+privacy_contact_form_text_3=Data transmitted via the contact form will remain with us until you request us to delete it, revoke your consent to store it, or there is no longer any need to store the data. Mandatory legal provisions - in particular retention periods - remain unaffected.
+privacy_cookies_section_title=Cookies
+privacy_cookies_text_1=Our website uses cookies. These are small text files that your web browser stores on your terminal device. Cookies help us to make our offer more user-friendly, effective and secure.
+privacy_cookies_text_2=Some cookies are "session cookies." Such cookies are deleted by themselves after the end of your browser session. On the other hand, other cookies remain on your terminal device until you delete them yourself. Such cookies help us to recognize you when you return to our website.
+privacy_cookies_text_3=With a modern web browser, you can monitor, restrict or prevent the setting of cookies. Many web browsers can be configured so that cookies are deleted automatically when the program is closed. Disabling cookies may result in limited functionality of our website.
+privacy_cookies_text_4=The setting of cookies, which are necessary for the exercise of electronic communication processes or the provision of certain functions desired by you (e.g. shopping cart), is based on Art. 6 para. 1 lit. f DSGVO. As the operator of this website, we have a legitimate interest in storing cookies for the technically error-free and smooth provision of our services. If other cookies are set (e.g. for analysis functions), these are dealt with separately in this privacy policy.
+privacy_google_analytics_section_title=Google Analytics
+privacy_google_analytics_general_text_1=Our website uses functions of the web analysis service Google Analytics. The provider of the web analytics service is Google Inc, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.
+privacy_google_analytics_general_text_2=Google Analytics uses "cookies." These are small text files that your web browser stores on your terminal device and enable an analysis of website usage. Information generated by cookies about your use of our website is transmitted to a Google server and stored there. The server is usually located in the USA.
+privacy_google_analytics_general_text_3=The setting of Google Analytics cookies is based on Art. 6 (1) lit. f GDPR. As the operator of this website, we have a legitimate interest in analyzing user behavior in order to optimize our website and possibly also advertising.
+privacy_google_analytics_ip_title=IP anonymization
+privacy_google_analytics_ip_text=We use Google Analytics in conjunction with the IP anonymization function. It ensures that Google truncates your IP address within member states of the European Union or in other contracting states to the Agreement on the European Economic Area before transferring it to the USA. There may be exceptional cases in which Google transfers the full IP address to a server in the USA and shortens it there. On our behalf, Google will use this information for the purpose of evaluating your use of the website, compiling reports on website activity and providing us with other services relating to website activity and internet usage. The IP address transmitted by Google Analytics is not merged with other Google data.
+privacy_google_analytics_plugin_title=Browser Plugin
+privacy_google_analytics_plugin_text=The setting of cookies by your web browser can be prevented. However, some functions of our website may be restricted as a result. Likewise, you can prevent the collection of data regarding your website usage, including your IP address, including subsequent processing by Google. This is possible by downloading and installing the browser plugin accessible via the following link: <a target="blank" href="{0}">{0}</a>.
+privacy_google_analytics_plugin_text_link=https://tools.google.com/dlpage/gaoptout?hl=en
+privacy_google_analytics_disagreement_title=Objection to the data collection
+privacy_google_analytics_disagreement_text_1=You can prevent the collection of your data by Google Analytics by clicking on the following link. An opt-out cookie will be set that prevents the collection of your data during future visits to our website: Disable Google Analytics.
+privacy_google_analytics_disagreement_text_2=Details on how Google Analytics handles user data can be found in Google''s privacy policy: <a target="blank" href="{0}">{0}</a>.
+privacy_google_analytics_disagreement_text_2_link=https://support.google.com/analytics/answer/6004245?hl=en
+privacy_google_analytics_order_processing_title=Order processing
+privacy_google_analytics_order_processing_text=In order to fully comply with the legal data protection requirements, we have concluded an order processing agreement with Google.
+privacy_google_analytics_order_demographic_data_title=Demographic characteristics in Google Analytics
+privacy_google_analytics_order_demographic_data_text=Our website uses the "demographic characteristics" function of Google Analytics. It can be used to create reports that contain statements about the age, gender and interests of site visitors. This data comes from interest-based advertising from Google as well as visitor data from third-party providers. It is not possible to assign the data to a specific person. You can deactivate this function at any time. This is possible via the ad settings in your Google account or by generally prohibiting the collection of your data by Google Analytics, as explained in the item "Objection to data collection".
+privacy_google_ad_words_section_title=Google AdWords und Google Conversion-Tracking
+privacy_google_ad_words_text_1=Our website uses Google AdWords. The provider is Google Inc, 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States.
+privacy_google_ad_words_text_2=AdWords is an online advertising program. As part of the online advertising program, we work with conversion tracking. After a click on an ad placed by Google, a cookie is set for conversion tracking. Cookies are small text files that your web browser stores on your terminal device. Google AdWords cookies lose their validity after 30 days and are not used to personally identify users. The cookie allows Google and us to recognize that you clicked on an ad and were redirected to our website.
+privacy_google_ad_words_text_3=Each Google AdWords customer receives a different cookie. The cookies are not trackable via AdWords customer websites. Conversion cookies are used to create conversion statistics for AdWords customers who use conversion tracking. AdWords customers learn how many users clicked on their ad and were redirected to pages with conversion tracking tag. However, AdWords customers do not receive any information that allows personal identification of users. If you do not want to participate in tracking, you can object to its use. In this case, the conversion cookie must be deactivated in the user settings of the browser. In this way, there will also be no inclusion in the conversion tracking statistics.
+privacy_google_ad_words_text_4=The storage of "conversion cookies" is based on Art. 6 (1) lit. f GDPR. We as website operator have a legitimate interest in analyzing user behavior in order to optimize our website and our advertising.
+privacy_google_ad_words_text_5=For details on Google AdWords and Google Conversion Tracking, please refer to Google''s privacy policy: <a target="blank" href="{0}">{0}</a>.
+privacy_google_ad_words_text_5_link=https://www.google.de/policies/privacy/
+privacy_google_ad_words_text_6=With a modern web browser, you can monitor, restrict or disable the setting of cookies. Disabling cookies may result in limited functionality of our website.
+privacy_google_web_fonts_section_title=Google Web Fonts
+privacy_google_web_fonts_text_1=Our website uses web fonts from Google. The provider is Google Inc, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.
+privacy_google_web_fonts_text_2=By using these web fonts, it is possible to present you with the presentation of our website that we desire, regardless of which fonts are available to you locally. This is done by retrieving the Google web fonts from a Google server in the U.S. and the associated transfer of your data to Google. This is your IP address and which of our pages you have visited. The use of Google Web Fonts is based on Art. 6 para. 1 lit. f DSGVO. As the operator of this website, we have a legitimate interest in the optimal presentation and transmission of our website.
+privacy_google_web_fonts_text_3=The company Google is certified for the us-European data protection agreement "Privacy Shield". This data protection agreement is intended to ensure compliance with the level of data protection applicable in the EU.
+privacy_google_web_fonts_text_4=Details about Google Web Fonts can be found at: <a target="blank" href="{0}">{0}</a> and further information in Google''s privacy policy: <a target="blank" href="{1}">{1}</a>
+privacy_google_web_fonts_text_4_link_1=https://fonts.google.com/about
+privacy_google_web_fonts_text_4_link_2=https://policies.google.com/technologies/partner-sites?hl=en
+privacy_copyright_note_section_title=Copyright note
+privacy_copyright_note_text=Source: Datenschutz-Konfigurator von <a target="blank" href="{0}">{0}</a>
+privacy_copyright_note_text_link=https://www.mein-datenschutzbeauftragter.de
+privacy_copyright_note_addendum=<br>Translated with <a target="blank" href="{0}">{0}</a>
+privacy_copyright_note_addendum_link=https://www.deepl.com/translator
