--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -12,14 +12,12 @@ cookie_consent_data_protection_link_text=Datenschutz- und Cookie-Richtlinien
 cookie_consent_imprint_link_text=Impressum
 cookie_consent_accept_all_button_text=Alle akzeptieren
 cookie_consent_decline_all_button_text=Alle ablehnen
-cookie_consent_revoke_text=Cookie-Entscheidung widerrufen
-# Privacy and cookies
-privacy_and_cookies_title=Datenschutz- und Cookie-Richtlinien
+
 # Imprint
 imprint_title=Impressum
 imprint_legal_hint_title=Angaben gem&auml;&szlig; § 5 TMG:
 imprint_address_title=Postanschrift
-imprint_address_co=c/o
+address_co=c/o
 imprint_contact_title=Kontakt:
 imprint_phone_title=Telefon:
 imprint_email_title=E-Mail:
@@ -32,3 +30,78 @@ imprint_website_copyright_notices_title=Urheberrechtliche Hinweise
 # URLs - Must be mapped in a controller
 imprint_path=impressum.html
 gdpr_path=datenschutz.html
+# Privacy and cookies
+privacy_and_cookies_title=Datenschutzerklärung
+privacy_legal_information_title=Allgemeiner Hinweis und Pflichtinformationen
+privacy_legal_responsible_position_section_title=Benennung der verantwortlichen Stelle
+privacy_legal_responsible_position_title=Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:
+privacy_legal_responsible_position_info=Die verantwortliche Stelle entscheidet allein oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.B. Namen, Kontaktdaten o. Ä.).
+privacy_legal_data_processing_section_title=Widerruf Ihrer Einwilligung zur Datenverarbeitung
+privacy_legal_data_processing_text=Nur mit Ihrer ausdrücklichen Einwilligung sind einige Vorgänge der Datenverarbeitung möglich. Ein Widerruf Ihrer bereits erteilten Einwilligung ist jederzeit möglich. Für den Widerruf genügt eine formlose Mitteilung per E-Mail. Die Rechtmäßigkeit der bis zum Widerruf erfolgten Datenverarbeitung bleibt vom Widerruf unberührt.
+privacy_legal_cookie_consent_revoke_text_1=Hier können Sie Ihre Entscheidung zu Cookies widerrufen.
+privacy_legal_cookie_consent_revoke_text_2=Cookie-Entscheidung widerrufen
+privacy_legal_complaint_section_title=Recht auf Beschwerde bei der zuständigen Aufsichtsbehörde
+privacy_legal_complaint_section_text=Als Betroffener steht Ihnen im Falle eines datenschutzrechtlichen Verstoßes ein Beschwerderecht bei der zuständigen Aufsichtsbehörde zu. Zuständige Aufsichtsbehörde bezüglich datenschutzrechtlicher Fragen ist der Landesdatenschutzbeauftragte des Bundeslandes, in dem sich der Sitz unseres Unternehmens befindet. Der folgende Link stellt eine Liste der Datenschutzbeauftragten sowie deren Kontaktdaten bereit: <a target="blank" href="{0}">{0}</a>.
+privacy_legal_complaint_section_text_link=https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html
+privacy_data_portability_section_title=Recht auf Datenübertragbarkeit
+privacy_data_portability_text=Ihnen steht das Recht zu, Daten, die wir auf Grundlage Ihrer Einwilligung oder in Erfüllung eines Vertrags automatisiert verarbeiten, an sich oder an Dritte aushändigen zu lassen. Die Bereitstellung erfolgt in einem maschinenlesbaren Format. Sofern Sie die direkte Übertragung der Daten an einen anderen Verantwortlichen verlangen, erfolgt dies nur, soweit es technisch machbar ist.
+privacy_data_information_section_title=Recht auf Auskunft, Berichtigung, Sperrung, Löschung
+privacy_data_information_text=Sie haben jederzeit im Rahmen der geltenden gesetzlichen Bestimmungen das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, Herkunft der Daten, deren Empfänger und den Zweck der Datenverarbeitung und ggf. ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Diesbezüglich und auch zu weiteren Fragen zum Thema personenbezogene Daten können Sie sich jederzeit über die im Impressum aufgeführten Kontaktmöglichkeiten an uns wenden.
+privacy_encryption_section_title=SSL- bzw. TLS-Verschlüsselung
+privacy_encryption_text=Aus Sicherheitsgründen und zum Schutz der Übertragung vertraulicher Inhalte, die Sie an uns als Seitenbetreiber senden, nutzt unsere Website eine SSL-bzw. TLS-Verschlüsselung. Damit sind Daten, die Sie über diese Website übermitteln, für Dritte nicht mitlesbar. Sie erkennen eine verschlüsselte Verbindung an der "https://" Adresszeile Ihres Browsers und am Schloss-Symbol in der Browserzeile.
+privacy_server_log_section_title=Server-Log-Dateien
+privacy_server_log_text=In Server-Log-Dateien erhebt und speichert der Provider der Website automatisch Informationen, die Ihr Browser automatisch an uns übermittelt. Dies sind:
+privacy_server_log_list_item_1=Besuchte Seite auf unserer Domain
+privacy_server_log_list_item_2=Datum und Uhrzeit der Serveranfrage
+privacy_server_log_list_item_3=Browsertyp und Browserversion
+privacy_server_log_list_item_4=Verwendetes Betriebssystem
+privacy_server_log_list_item_5=Referrer URL
+privacy_server_log_list_item_6=Hostname des zugreifenden Rechners
+privacy_server_log_list_item_7=IP-Adresse
+privacy_server_log_info=Es findet keine Zusammenführung dieser Daten mit anderen Datenquellen statt. Grundlage der Datenverarbeitung bildet Art. 6 Abs. 1 lit. b DSGVO, der die Verarbeitung von Daten zur Erfüllung eines Vertrags oder vorvertraglicher Maßnahmen gestattet.
+privacy_contact_form_section_title=Kontaktformular
+privacy_contact_form_text_1=Per Kontaktformular übermittelte Daten werden einschließlich Ihrer Kontaktdaten gespeichert, um Ihre Anfrage bearbeiten zu können oder um für Anschlussfragen bereitzustehen. Eine Weitergabe dieser Daten findet ohne Ihre Einwilligung nicht statt.
+privacy_contact_form_text_2=Die Verarbeitung der in das Kontaktformular eingegebenen Daten erfolgt ausschließlich auf Grundlage Ihrer Einwilligung (Art. 6 Abs. 1 lit. a DSGVO). Ein Widerruf Ihrer bereits erteilten Einwilligung ist jederzeit möglich. Für den Widerruf genügt eine formlose Mitteilung per E-Mail. Die Rechtmäßigkeit der bis zum Widerruf erfolgten Datenverarbeitungsvorgänge bleibt vom Widerruf unberührt.
+privacy_contact_form_text_3=Über das Kontaktformular übermittelte Daten verbleiben bei uns, bis Sie uns zur Löschung auffordern, Ihre Einwilligung zur Speicherung widerrufen oder keine Notwendigkeit der Datenspeicherung mehr besteht. Zwingende gesetzliche Bestimmungen - insbesondere Aufbewahrungsfristen - bleiben unberührt.
+privacy_cookies_section_title=Cookies
+privacy_cookies_text_1=Unsere Website verwendet Cookies. Das sind kleine Textdateien, die Ihr Webbrowser auf Ihrem Endgerät speichert. Cookies helfen uns dabei, unser Angebot nutzerfreundlicher, effektiver und sicherer zu machen.
+privacy_cookies_text_2=Einige Cookies sind "Session-Cookies." Solche Cookies werden nach Ende Ihrer Browser-Sitzung von selbst gelöscht. Hingegen bleiben andere Cookies auf Ihrem Endgerät bestehen, bis Sie diese selbst löschen. Solche Cookies helfen uns, Sie bei Rückkehr auf unserer Website wiederzuerkennen.
+privacy_cookies_text_3=Mit einem modernen Webbrowser können Sie das Setzen von Cookies überwachen, einschränken oder unterbinden. Viele Webbrowser lassen sich so konfigurieren, dass Cookies mit dem Schließen des Programms von selbst gelöscht werden. Die Deaktivierung von Cookies kann eine eingeschränkte Funktionalität unserer Website zur Folge haben.
+privacy_cookies_text_4=Das Setzen von Cookies, die zur Ausübung elektronischer Kommunikationsvorgänge oder der Bereitstellung bestimmter, von Ihnen erwünschter Funktionen (z.B. Warenkorb) notwendig sind, erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO. Als Betreiber dieser Website haben wir ein berechtigtes Interesse an der Speicherung von Cookies zur technisch fehlerfreien und reibungslosen Bereitstellung unserer Dienste. Sofern die Setzung anderer Cookies (z.B. für Analyse-Funktionen) erfolgt, werden diese in dieser Datenschutzerklärung separat behandelt.
+privacy_google_analytics_section_title=Google Analytics
+privacy_google_analytics_general_text_1=Unsere Website verwendet Funktionen des Webanalysedienstes Google Analytics. Anbieter des Webanalysedienstes ist die Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.
+privacy_google_analytics_general_text_2=Google Analytics verwendet "Cookies." Das sind kleine Textdateien, die Ihr Webbrowser auf Ihrem Endgerät speichert und eine Analyse der Website-Benutzung ermöglichen. Mittels Cookie erzeugte Informationen über Ihre Benutzung unserer Website werden an einen Server von Google übermittelt und dort gespeichert. Server-Standort ist im Regelfall die USA.
+privacy_google_analytics_general_text_3=Das Setzen von Google-Analytics-Cookies erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO. Als Betreiber dieser Website haben wir  ein berechtigtes Interesse an der Analyse des Nutzerverhaltens, um unser Webangebot und ggf. auch Werbung zu optimieren.
+privacy_google_analytics_ip_title=IP-Anonymisierung
+privacy_google_analytics_ip_text=Wir setzen Google Analytics in Verbindung mit der Funktion IP-Anonymisierung ein. Sie gewährleistet, dass Google Ihre IP-Adresse innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum vor der Übermittlung in die USA kürzt. Es kann Ausnahmefälle geben, in denen Google die volle IP-Adresse an einen Server in den USA überträgt und dort kürzt. In unserem Auftrag wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über Websiteaktivitäten zu erstellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber uns zu erbringen. Es findet keine Zusammenführung der von Google Analytics übermittelten IP-Adresse mit anderen Daten von Google statt.
+privacy_google_analytics_plugin_title=Browser Plugin
+privacy_google_analytics_plugin_text=Das Setzen von Cookies durch Ihren Webbrowser ist verhinderbar. Einige Funktionen unserer Website könnten dadurch jedoch eingeschränkt werden. Ebenso können Sie die Erfassung von Daten bezüglich Ihrer Website-Nutzung einschließlich Ihrer IP-Adresse mitsamt anschließender Verarbeitung durch Google unterbinden. Dies ist möglich, indem Sie das über folgenden Link erreichbare Browser-Plugin herunterladen und installieren: <a target="blank" href="{0}">{0}</a>.
+privacy_google_analytics_plugin_text_link=https://tools.google.com/dlpage/gaoptout?hl=de
+privacy_google_analytics_disagreement_title=Widerspruch gegen die Datenerfassung
+privacy_google_analytics_disagreement_text_1=Sie können die Erfassung Ihrer Daten durch Google Analytics verhindern, indem Sie auf folgenden Link klicken. Es wird ein Opt-Out-Cookie gesetzt, der die Erfassung Ihrer Daten bei zukünftigen Besuchen unserer Website verhindert: Google Analytics deaktivieren.
+privacy_google_analytics_disagreement_text_2=Einzelheiten zum Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerklärung von Google: <a target="blank" href="{0}">{0}</a>
+privacy_google_analytics_disagreement_text_2_link=https://support.google.com/analytics/answer/6004245?hl=de.
+privacy_google_analytics_order_processing_title=Auftragsverarbeitung
+privacy_google_analytics_order_processing_text=Zur vollständigen Erfüllung der gesetzlichen Datenschutzvorgaben haben wir mit Google einen Vertrag über die Auftragsverarbeitung abgeschlossen.
+privacy_google_analytics_order_demographic_data_title=Demografische Merkmale bei Google Analytics
+privacy_google_analytics_order_demographic_data_text=Unsere Website verwendet die Funktion "demografische Merkmale" von Google Analytics. Mit ihr lassen sich Berichte erstellen, die Aussagen zu Alter, Geschlecht und Interessen der Seitenbesucher enthalten. Diese Daten stammen aus interessenbezogener Werbung von Google sowie aus Besucherdaten von Drittanbietern. Eine Zuordnung der Daten zu einer bestimmten Person ist nicht möglich. Sie können diese Funktion jederzeit deaktivieren. Dies ist über die Anzeigeneinstellungen in Ihrem Google-Konto möglich oder indem Sie die Erfassung Ihrer Daten durch Google Analytics, wie im Punkt "Widerspruch gegen die Datenerfassung" erläutert, generell untersagen.
+privacy_google_ad_words_section_title=Google AdWords und Google Conversion-Tracking
+privacy_google_ad_words_text_1=Unsere Website verwendet Google AdWords. Anbieter ist die Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States.
+privacy_google_ad_words_text_2=AdWords ist ein Online-Werbeprogramm. Im Rahmen des Online-Werbeprogramms arbeiten wir mit Conversion-Tracking. Nach einem Klick auf eine von Google geschaltete Anzeige wird ein Cookie für das Conversion-Tracking gesetzt. Cookies sind kleine Textdateien, die Ihr Webbrowser auf Ihrem Endgerät speichert. Google AdWords Cookies verlieren nach 30 Tagen ihre Gültigkeit und dienen nicht der persönlichen Identifizierung der Nutzer. Am Cookie können Google und wir erkennen, dass Sie auf eine Anzeige geklickt haben und zu unserer Website weitergeleitet wurden.
+privacy_google_ad_words_text_3=Jeder Google AdWords-Kunde erhält ein anderes Cookie. Die Cookies sind nicht über Websites von AdWords-Kunden nachverfolgbar. Mit Conversion-Cookies werden Conversion-Statistiken für AdWords-Kunden, die Conversion-Tracking einsetzen, erstellt. Adwords-Kunden erfahren wie viele Nutzer auf ihre Anzeige geklickt haben und auf Seiten mit Conversion-Tracking-Tag weitergeleitet wurden. AdWords-Kunden erhalten jedoch keine Informationen, die eine persönliche Identifikation der Nutzer ermöglichen. Wenn Sie nicht am Tracking teilnehmen möchten, können Sie einer Nutzung widersprechen. Hier ist das Conversion-Cookie in den Nutzereinstellungen des Browsers zu deaktivieren. So findet auch keine Aufnahme in die Conversion-Tracking Statistiken statt.
+privacy_google_ad_words_text_4=Die Speicherung von "Conversion-Cookies" erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO. Wir als Websitebetreiber haben ein berechtigtes Interesse an der Analyse des Nutzerverhaltens, um unser Webangebot und unsere Werbung zu optimieren.
+privacy_google_ad_words_text_5=Einzelheiten zu Google AdWords und Google Conversion-Tracking finden Sie in den Datenschutzbestimmungen von Google: <a target="blank" href="{0}">{0}</a>.
+privacy_google_ad_words_text_5_link=https://www.google.de/policies/privacy/
+privacy_google_ad_words_text_6=Mit einem modernen Webbrowser können Sie das Setzen von Cookies überwachen, einschränken oder unterbinden. Die Deaktivierung von Cookies kann eine eingeschränkte Funktionalität unserer Website zur Folge haben.
+privacy_google_web_fonts_section_title=Google Web Fonts
+privacy_google_web_fonts_text_1=Unsere Website verwendet Web Fonts von Google. Anbieter ist die Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.
+privacy_google_web_fonts_text_2=Durch den Einsatz dieser Web Fonts wird es möglich Ihnen die von uns gewünschte Darstellung unserer Website zu präsentieren, unabhängig davon welche Schriften Ihnen lokal zur Verfügung stehen. Dies erfolgt über den Abruf der Google Web Fonts von einem Server von Google in den USA und der damit verbundenen Weitergabe Ihre Daten an Google. Dabei handelt es sich um Ihre IP-Adresse und welche Seite Sie bei uns besucht haben. Der Einsatz von Google Web Fonts erfolgt auf Grundlage von Art. 6 Abs. 1 lit. f DSGVO. Als Betreiber dieser Website haben wir ein berechtigtes Interesse an der optimalen Darstellung und Übertragung unseres Webauftritts.
+privacy_google_web_fonts_text_3=Das Unternehmen Google ist für das us-europäische Datenschutzübereinkommen "Privacy Shield" zertifiziert. Dieses Datenschutzübereinkommen soll die Einhaltung des in der EU geltenden Datenschutzniveaus gewährleisten.
+privacy_google_web_fonts_text_4=Einzelheiten über Google Web Fonts finden Sie unter: <a target="blank" href="{0}">{0}</a> und weitere Informationen in den Datenschutzbestimmungen von Google: <a target="blank" href="{1}">{1}</a>
+privacy_google_web_fonts_text_4_link_1=https://fonts.google.com/about
+privacy_google_web_fonts_text_4_link_2=https://policies.google.com/technologies/partner-sites?hl=de
+privacy_copyright_note_section_title=Copyright Hinweis
+privacy_copyright_note_text=Quelle: Datenschutz-Konfigurator von <a target="blank" href="{0}">{0}</a>
+privacy_copyright_note_text_link=https://www.mein-datenschutzbeauftragter.de
+privacy_copyright_note_addendum=
+privacy_copyright_note_addendum_link=
