--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -102,7 +102,7 @@ privacy_google_web_fonts_text_4=Details about Google Web Fonts can be found at: 
 privacy_google_web_fonts_text_4_link_1=https://fonts.google.com/about
 privacy_google_web_fonts_text_4_link_2=https://policies.google.com/technologies/partner-sites?hl=en
 privacy_copyright_note_section_title=Copyright note
-privacy_copyright_note_text=Source: Datenschutz-Konfigurator von <a target="blank" href="{0}">{0}</a>
+privacy_copyright_note_text=Source: "Datenschutz-Konfigurator" at <a target="blank" href="{0}">{0}</a>
 privacy_copyright_note_text_link=https://www.mein-datenschutzbeauftragter.de
-privacy_copyright_note_addendum=<br>Translated with <a target="blank" href="{0}">{0}</a>
+privacy_copyright_note_addendum=<br>Translated with: <a target="blank" href="{0}">{0}</a>
 privacy_copyright_note_addendum_link=https://www.deepl.com/translator
