--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,7 +97,7 @@ privacy_google_ad_words_text_6=With a modern web browser, you can monitor, restr
 privacy_google_web_fonts_section_title=Google Web Fonts
 privacy_google_web_fonts_text_1=Our website uses web fonts from Google. The provider is Google Inc, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.
 privacy_google_web_fonts_text_2=By using these web fonts, it is possible to present you with the presentation of our website that we desire, regardless of which fonts are available to you locally. This is done by retrieving the Google web fonts from a Google server in the U.S. and the associated transfer of your data to Google. This is your IP address and which of our pages you have visited. The use of Google Web Fonts is based on Art. 6 para. 1 lit. f DSGVO. As the operator of this website, we have a legitimate interest in the optimal presentation and transmission of our website.
-privacy_google_web_fonts_text_3=The company Google is certified for the us-European data protection agreement "Privacy Shield". This data protection agreement is intended to ensure compliance with the level of data protection applicable in the EU.
+privacy_google_web_fonts_text_3=The company Google is certified for the US-European data protection agreement "Privacy Shield". This data protection agreement is intended to ensure compliance with the level of data protection applicable in the EU.
 privacy_google_web_fonts_text_4=Details about Google Web Fonts can be found at: <a target="blank" href="{0}">{0}</a> and further information in Google''s privacy policy: <a target="blank" href="{1}">{1}</a>
 privacy_google_web_fonts_text_4_link_1=https://fonts.google.com/about
 privacy_google_web_fonts_text_4_link_2=https://policies.google.com/technologies/partner-sites?hl=en
