--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,19 +1,20 @@
 # CV
 since=since
-
 # Website
-hire_me=Hire me
+lang_toggle_german=German
+lang_toggle_english=English
+hire_me=Get in touch
 request_cv=Request CV
 toggle_button_text_prefix=Toggle {0}
 imprint_link_text=Imprint
 privacy_and_cookies_link_text=Privacy and Cookie Policy
+general_dialog_ok=Ok
 # Cookie consent
 cookie_consent_message=This website uses cookies to ensure you get the best experience.<br>
 cookie_consent_data_protection_link_text=Privacy and Cookie Policy
 cookie_consent_imprint_link_text=Imprint
 cookie_consent_accept_all_button_text=Allow all
 cookie_consent_decline_all_button_text=Decline all
-
 # Imprint
 imprint_title=Imprint
 imprint_legal_hint_title=Information in accordance with &sect; 5 TMG:
