--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,8 +1,17 @@
+# Files
+contact_form_source=contact_form_de.json
+gdpr_source=gdpr_de.json
+imprint_source=imprint_de.json
+cv_source=cv_de.json
 # CV
 since=seit
 # Website
 lang_toggle_german=Deutsch
 lang_toggle_english=Englisch
+about_basic_information=Allgemeine Informationen
+about_country=Land
+about_operating_radius=Aktionsradius
+about_working_modes=Arbeitsmodi
 hire_me=Kontakt
 request_cv=Profil anfragen
 toggle_button_text_prefix={0} umschalten
@@ -17,7 +26,7 @@ cookie_consent_accept_all_button_text=Alle akzeptieren
 cookie_consent_decline_all_button_text=Alle ablehnen
 # Imprint
 imprint_title=Impressum
-imprint_legal_hint_title=Angaben gem&auml;&szlig; § 5 TMG:
+imprint_legal_hint_title=Angaben gem&auml;&szlig; &sect; 5 TMG:
 imprint_address_title=Postanschrift
 address_co=c/o
 imprint_contact_title=Kontakt:
