--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,8 +1,17 @@
+# Files
+contact_form_source=contact_form_en.json
+gdpr_source=gdpr_en.json
+imprint_source=imprint_en.json
+cv_source=cv_en.json
 # CV
 since=since
 # Website
 lang_toggle_german=German
 lang_toggle_english=English
+about_basic_information=Basic Information
+about_country=Country
+about_operating_radius=Operating radius
+about_working_modes=Working modes
 hire_me=Get in touch
 request_cv=Request CV
 toggle_button_text_prefix=Toggle {0}
