more localization and language switch

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -23,7 +23,7 @@ cookie_consent_message=Diese Website verwendet Cookies, um Ihnen das bestm&ouml;
 cookie_consent_data_protection_link_text=Datenschutz- und Cookie-Richtlinien
 cookie_consent_imprint_link_text=Impressum
 cookie_consent_accept_all_button_text=Alle akzeptieren
-cookie_consent_decline_all_button_text=Alle ablehnen
+cookie_consent_decline_all_button_text=Nur technische Cookies zulassen
 # Imprint
 imprint_title=Impressum
 imprint_legal_hint_title=Angaben gem&auml;&szlig; &sect; 5 TMG:
