--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -23,7 +23,7 @@ cookie_consent_message=This website uses cookies to ensure you get the best expe
 cookie_consent_data_protection_link_text=Privacy and Cookie Policy
 cookie_consent_imprint_link_text=Imprint
 cookie_consent_accept_all_button_text=Allow all
-cookie_consent_decline_all_button_text=Decline all
+cookie_consent_decline_all_button_text=Allow technical cookies only
 # Imprint
 imprint_title=Imprint
 imprint_legal_hint_title=Information in accordance with &sect; 5 TMG:
