add error handling

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -116,3 +116,13 @@ privacy_copyright_note_text=Quelle: Datenschutz-Konfigurator von <a target="blan
 privacy_copyright_note_text_link=https://www.mein-datenschutzbeauftragter.de
 privacy_copyright_note_addendum=
 privacy_copyright_note_addendum_link=
+# Error handling
+error_title=Ein Fehler ist aufgetreten - Status: {0}
+error_status_codes_title=Status codes kurz erkl&auml;rt:
+error_status_codes_1xx=Informativ (1xx): Zeigt an, dass die Anfrage eingegangen ist und der Prozess fortgesetzt wird. Es weist den Absender darauf hin, auf eine endg&uuml;ltige Antwort zu warten.
+error_status_codes_2xx=Erfolgreich (2xx): Zeigt an, dass die Anfrage erfolgreich empfangen, verstanden und akzeptiert wurde.
+error_status_codes_3xx=Umleitung (3xx): Zeigt an, dass weitere Ma&szlig;nahmen ergriffen werden m&uuml;ssen, um die Anfrage abzuschlie&szlig;en.
+error_status_codes_4xx=Client-Fehler (4xx): Zeigt an, dass bei der Verarbeitung der Anfrage ein Fehler aufgetreten ist und dass der Client den Fehler verursacht hat.
+error_status_codes_5xx=Server-Fehler (5xx): Zeigt an, dass bei der Verarbeitung der Anfrage ein Fehler aufgetreten ist, der jedoch vom Server verursacht wurde.
+error_status_codes_wiki_link_text=Unter <a target="blank" href="{0}">{0}</a> erfahren Sie mehr &uuml;ber Status-Codes.
+error_status_codes_wiki_link=https://de.wikipedia.org/wiki/HTTP-Statuscode
