--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -116,3 +116,13 @@ privacy_copyright_note_text=Source: "Datenschutz-Konfigurator" at <a target="bla
 privacy_copyright_note_text_link=https://www.mein-datenschutzbeauftragter.de
 privacy_copyright_note_addendum=<br>Translated with: <a target="blank" href="{0}">{0}</a>
 privacy_copyright_note_addendum_link=https://www.deepl.com/translator
+# Error handling
+error_title=An error occurred - Status: {0}
+error_status_codes_title=Status codes in a nutshell:
+error_status_codes_1xx=Informational (1xx): Indicates that the request was received and the process is continuing. It alerts the sender to wait for a final response.
+error_status_codes_2xx=Successful (2xx): Indicates that the request was successfully received, understood, and accepted.
+error_status_codes_3xx=Redirection (3xx): Indicates that further action must be taken to complete the request.
+error_status_codes_4xx=Client Errors (4xx): Indicates that an error occurred during the request processing and it is the client who caused the error.
+error_status_codes_5xx=Server Errors (5xx): Indicates that an error occurred during request processing but that it was by the server.
+error_status_codes_wiki_link_text=Find out more about status codes at <a target="blank" href="{0}">{0}</a>
+error_status_codes_wiki_link=https://en.wikipedia.org/wiki/List_of_HTTP_status_codes
