fix contact request status message and added logging

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -18,6 +18,9 @@ toggle_button_text_prefix={0} umschalten
 imprint_link_text=Impressum
 privacy_and_cookies_link_text=Datenschutz- und Cookie-Richtlinien
 general_dialog_ok=Ok
+#Contact request
+contact_request_success=Ihre Anfrage wurde erfolgreich verschickt.
+contact_request_error=Bei der Verarbeitung Ihrer Anfrage ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.
 # Cookie consent
 cookie_consent_message=Diese Website verwendet Cookies, um Ihnen das bestm&ouml;gliche Erlebnis zu bieten.<br>
 cookie_consent_data_protection_link_text=Datenschutz- und Cookie-Richtlinien
