--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -18,6 +18,9 @@ toggle_button_text_prefix=Toggle {0}
 imprint_link_text=Imprint
 privacy_and_cookies_link_text=Privacy and Cookie Policy
 general_dialog_ok=Ok
+#Contact request
+contact_request_success=Your request has been sent successfully.
+contact_request_error=An error occurred while processing your request. Please try again later.
 # Cookie consent
 cookie_consent_message=This website uses cookies to ensure you get the best experience.<br>
 cookie_consent_data_protection_link_text=Privacy and Cookie Policy
