add profile download

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -13,7 +13,7 @@ about_country=Land
 about_operating_radius=Aktionsradius
 about_working_modes=Arbeitsmodi
 hire_me=Kontakt
-request_cv=Profil anfragen
+request_cv=Profil herunterladen
 toggle_button_text_prefix={0} umschalten
 imprint_link_text=Impressum
 privacy_and_cookies_link_text=Datenschutz- und Cookie-Richtlinien
