--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,7 +13,7 @@ about_country=Country
 about_operating_radius=Operating radius
 about_working_modes=Working modes
 hire_me=Get in touch
-request_cv=Request CV
+request_cv=Download CV
 toggle_button_text_prefix=Toggle {0}
 imprint_link_text=Imprint
 privacy_and_cookies_link_text=Privacy and Cookie Policy
