Extract metadata for website

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -3,6 +3,7 @@ contact_form_source=contact_form_de.json
 gdpr_source=gdpr_de.json
 imprint_source=imprint_de.json
 cv_source=cv_de.json
+website_metadata=metadata_de.json
 # CV
 since=seit
 # Website
