--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,7 @@ contact_form_source=contact_form_en.json
 gdpr_source=gdpr_en.json
 imprint_source=imprint_en.json
 cv_source=cv_en.json
+website_metadata=metadata_en.json
 # CV
 since=since
 # Website
